--- a/starter/index.html
+++ b/starter/index.html
@@ -6,7 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>M4 Challenge</title>
 </head>
+<style>
+  h1 {
+    text-align: center;
+    color: blueviolet;
+  }
+</style>
 <body>
+  <h1>Open up the console to see my results</h1>
   <script src="index.js"></script>
 </body>
 </html>
