--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <style>
   h1 {
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
     color: blueviolet;
   }
 </style>
 <body>
-  <h1>Open up the console to see my results</h1>
-  <script src="index.js"></script>
+  <h1>Open up the console to see my results<br>{ "Console- Finance" }</h1>
+  <script src="./js/index.js"></script>
 </body>
 </html>
